--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -86,7 +86,10 @@
 					<!-- Add Maven coordinates (GAV) for: maven-war-plugin -->
 				    <groupId>org.apache.maven.plugins</groupId>
 				    <artifactId>maven-war-plugin</artifactId>
-				    <version>3.2.0</version>					
+				    <version>3.2.0</version>
+				    <configuration>
+                		<failOnMissingWebXml>false</failOnMissingWebXml>
+            		</configuration>					
 				</plugin>						
 			</plugins>
 		</pluginManagement>
