--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -47,6 +47,20 @@
 		    <version>${springsecurity.version}</version>
 		</dependency>
 		
+		<!-- MySQL and CP30 Support -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.45</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.mchange</groupId>
+		    <artifactId>c3p0</artifactId>
+		    <version>0.9.5.2</version>
+		</dependency>
+		
+		
 		<!-- Servlet, JSP and JSTL support -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
